# prog1

./: .gitignore  readme.md
Code/NeuralNetwork/: CMakeLists.txt  Layer.h  dropoutlayer.cpp  dropoutlayer.h  layerbatchnorm.cpp  layerbatchnorm.h  layerfullyconnected.cpp  layerfullyconnected.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h
Code/NeuralNetwork copia/: CMakeLists.txt  Layer.cpp  Layer.h  activation.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h
Code/NeuralNetwork copia 2/: CMakeLists.txt  Layer.cpp  Layer.h  activation.h  layerfullyconnected.cpp  layerfullyconnected.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h  test.csv  train.csv
Code/NeuralNetwork2/: CMakeLists.txt  FullyConnectedLayer.cpp  FullyConnectedLayer.h  layer.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h
Code/normalizator/: n.ipynb  normalized_dataset.csv  test.csv  train.csv
Doc/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv
